-added outdoors basemap style -updated overflow-y to prevent refresh on downswipe mobile -load moment at end of base script, but not asyc to get std dates for start/end updated -removed map tolerace callouts -reduced max zoom to 20 on all sources -set buffer callout to zero (trying to prevent error on buffer size exceded geom extents)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,7 +56,7 @@ input[type="radio"], input[type="checkbox"] {
   position: relative;
   width: auto;
   height: 100%;
-  overflow:visible;
+  overflow-y:hidden;
 }
 .mapboxgl-popup {
     max-width: 400px;
